v2016-05-06
  * bash & zsh:
      单独将tmux 相关的函数拉出一个插件
      在使用SSH 登陆时交互式地试图使用tmux 取代login shell
      简化了reactor.sh

v2016-05-02
  * vim:
      在~/.ycm_extra_conf.py 中添加了内核头文件目录
      禁用syntastic 关闭检查以避免偶尔的退出时卡死

v2016-05-01.2
  * zsh:
      增加插件zsh-autosuggestions

v2016-05-01
  * all:
      修改了初始化脚本的逻辑使之也适用于更新

v2016-04-30.1
  * all:
      现在配置更新的时候不再使用写死的URL 了（只支持HTTP/HTTPS 方式）
  * vim:
      修正了init.sh 中错误的逻辑

v2016-04-30
  * all:
      精简README.md
  * bash & zsh:
      重写了archpkg 和ssh_env
      一些代码做了规范性调整
      重命名ssh_env 为sshenv
      重命名android_env 为androidenv
      重命名profile_upgrade 为profileupdate
      重命名profile_reconf 为profilereconf
  * vim:
      现在profilereconf 会更新并重配vim 插件了

v2016-04-29.6
  * all:
      更新了README.md

v2016-04-29.5
  * all:
      更新了README.md
  * bash & zsh:
      重写了一部分脚本

v2016-04-29.4
  * tmux:
      连接虚拟化主机时，退出tmux 即断开连接
  * bash & zsh:
      重写了一部分脚本

v2016-04-29.3
  * tmux:
      修复了无法SSH 到虚拟化主机的BUG

v2016-04-29.2
  * bash & zsh:
      现在试图在虚拟化环境中自动登陆到tmux
      增加了profile_reconf 函数

v2016-04-29
  * all:
      重构了整套安装脚本
      现在升级配置自动执行install.sh -a

v2016-04-27.3
  * vim:
      这下真的不会备份~/.vim 了……

v2016-04-27.2
  * nvim:
      增加nvim 配置，与vim 共享配置

v2016-04-27
  * vim:
      现在启用插件color_coded
      现在YCM 与color_coded 公用一套clang
      解决了使用color_coded 时Vim 花屏的BUG
      修改了Vim 配置插件的逻辑，不再备份原有的~/.vim 目录
  * host:
      改了个IP

v2016-04-25
  * tmux:
      删除了一些不兼容新版的配置
  * grub2:
      补齐了需要的配置文件

v2016-04-24
  * grub2:
      增加了grub2 配置文件

v2016-04-22
  * bash & zsh:
      修正了一处archpkg 的逻辑错误
  * zsh:
      修改了一些oh-my-zsh 插件
  * vim:
      增加快捷键,s

v2016-04-19
  * bash & zsh:
      修改了alias
      修改了archpkg upgrade-all 时升级linux-header 的顺序（可能会引入问题）
  * hosts
      增加了个人vps

v2016-04-17
  * git:
      增加了GPG 签名的commit 和tag 别名

v2016-04-16.3
  * zsh:
      解决了fc 无法显示所有历史的问题
  * nano:
      同步了新版的语法高亮文件
  * tmux:
      修复了2.1 版本引入的的鼠标滚屏问题，默认配置不再兼容2.1 之前的版本
  * pacman:
      修改了archlinuxcn 源
  * tig:
      搜索时不再区分大小写

v2016-04-16.2