@@ -7,7 +7,7 @@
 # ==============================================================================
 # 默认shell
 # ==============================================================================
-set -g default-shell /bin/zsh
+#set -g default-shell /usr/bin/zsh
 
 # ==============================================================================
 # 鼠标滚动
